Simplified and fixed login input to work on iphone

--- a/dev/css/main.styl
+++ b/dev/css/main.styl
@@ -171,7 +171,7 @@ section
         opacity 1
     
     .instruction
-      margin-bottom 2.75em
+      margin-bottom 2em
     
     form
       transition opacity $t-all-slow
@@ -179,39 +179,48 @@ section
     
     input
       text-align center
-      width 0
-      padding-left 0
-      padding-right 0
+      width 12em
+      min-width 12em
+      max-width 20.5em
+      padding .75em 0 .25em .5em
+      letter-spacing 1.5em
+      transition $t-all, width 0s, padding 0s
       
-      &:first-of-type
-        width 12em
-        max-width 12em
-        padding .25em
-        transition $t-all, max-width $t-all-slow, width $t-all-slow
-        
-        &:hover:not(.js-enter)
-          width 13em
-          max-width 13em
-          transition $t-all
+      &:hover
+        min-width 13em
           
-        &:focus:not(.js-enter)
-          width 12em
-          max-width 12em
-      
-      &.js-enter
-        width 6%
-        max-width 2em
-        padding .25em
-        margin-right .25em
+      &:focus
+        min-width 12em
         
-        &:hover
-          border-bottom-color $c-white
-          
-        &:nth-of-type(3), &:nth-of-type(6)
-          margin-right 1em
-      
       &.js-invalid-input
         border-bottom-color $c-negative !important
+      
+      // &:first-of-type
+      //   width 12em
+      //   max-width 12em
+      //   padding .25em
+      //   transition $t-all, max-width $t-all-slow, width $t-all-slow
+        
+        // &:hover:not(.js-enter)
+        //   width 13em
+        //   max-width 13em
+        //   transition $t-all
+          
+        // &:focus:not(.js-enter)
+        //   width 12em
+        //   max-width 12em
+      
+      // &.js-enter
+      //   width 6%
+      //   max-width 2em
+      //   padding .25em
+      //   margin-right .25em
+        
+      //   &:hover
+      //     border-bottom-color $c-white
+          
+      //   &:nth-of-type(3), &:nth-of-type(6)
+      //     margin-right 1em
         
     .instruction, .get-code
       transition $t-all-slow
